# ecatalog-api-client

./: .env.prod  .env.run  .gitignore  .mcp.json  CLAUDE.md  README.md  cli.py  ecatalog_client.py  ecatalog_example.py  ecommerce_client.py  example.py  pyproject.toml  requirements.txt  setrun.sh  test_client.py  test_m2m_auth.py
data/dropship/archive/: A-BUILD_ADES_Lighting.xlsx  A-BUILD_MNCT_dining-room.xlsx  B-BUILD_ADES_Lighting.xlsx  B-BUILD_MNCT_dining-room.xlsx  BUILD_ADES_Lighting.xlsx  BUILD_ADES_Lighting_20251016_084908.xlsx  BUILD_ILIL_Sports,rugs.xlsx  BUILD_ILIL_seating.xlsx  BUILD_ILIL_seating_20251013_083316.xlsx  BUILD_LOLO_rug.xlsx  BUILD_LORC_accessories.xlsx  BUILD_MNCT_bedroom.xlsx  BUILD_MNCT_dining-room.xlsx  BUILD_MNCT_dining-room_20251009_152631.xlsx  BUILD_ONUP_home-accent.xlsx  BUILD_SCRF_bedroom.xlsx  BUILD_SFVH_dining-room.xlsx  BUILD_SWAC_home-accent.xlsx  (+20 more)
data/rtg_delivered/: README.md  sample_items.csv
data/sku_substitution/: MERCH_SUBSKU_HLVN 7105_LIVING ROOM.xlsx
docs/: api.md  field-mapping.md  openapi.json
sql/: ATTRIBUTE - Create a new Size attribute value.sql  DELETE - Remove Rooms and associated tables from eCatalog.sql  ECAT-Fix-FAILED-workrequests.sql  FLOW-Process-Dropship_Batch-From-Import.sql
workflows/: __init__.py  dropship_workflow.py  import_dropship_items.py  import_items.py  import_items_with_auth.py  import_room_item_swap.py  import_rtg_delivered_items.py  import_sku_substitution.py  room_item_swap_workflow.py  rtg_delivered_workflow.py  sku_substitution.py  sku_substitution_file_workflow.py  workflow_logger.py
(+15 files in other folders)
